tests/baselines/reference/exportAssignmentWithImportStatementPrivacyError(strict=true).errors.txt
exportAssignmentWithImportStatementPrivacyError.ts(3,10): error TS7006: Parameter 'res' implicitly has an 'any' type.
exportAssignmentWithImportStatementPrivacyError.ts(3,15): error TS7006: Parameter 'req' implicitly has an 'any' type.
exportAssignmentWithImportStatementPrivacyError.ts(3,20): error TS7006: Parameter 'next' implicitly has an 'any' type.


==== exportAssignmentWithImportStatementPrivacyError.ts (3 errors) ====
    module m2 {
        export interface connectModule {
            (res, req, next): void;
             ~~~
!!! error TS7006: Parameter 'res' implicitly has an 'any' type.
                  ~~~
!!! error TS7006: Parameter 'req' implicitly has an 'any' type.
                       ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    module M {
        export var server: {
            (): m2.connectExport;
            test1: m2.connectModule;
            test2(): m2.connectModule;
        };
    }
    import M22 = M;
    
    export = M;